# unjust

./: .pre-commit-config.yaml  Cargo.toml  Justfile  README.md
unjust-cli/: Cargo.toml
unjust-cli/src/: main.rs
unjust-cli/tests/: cli_tests.rs
unjust-core/: Cargo.toml
unjust-core/src/: justfile.rs  lib.rs  repository.rs
unjust-init/: Cargo.toml
unjust-init/src/: lib.rs
unjust-list/: Cargo.toml
unjust-list/src/: lib.rs
unjust-sync/: Cargo.toml
unjust-sync/src/: lib.rs
unjust-use/: Cargo.toml
unjust-use/src/: lib.rs
