[workspace]
members = [
  "unjust-cli",
  "unjust-core",
  "unjust-list",
  "unjust-init",
  "unjust-use",
]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT OR Apache-2.0"
description = "A tool for managing portable Justfiles across projects"
repository = "https://github.com/lmmx/unjust"

[workspace.dependencies]
facet = { version = "0.18.6", default-features = false, features = [] }
standard_paths = "2.1.0"
console = "0.15.11"
facet-args = { version = "0.18.5", default-features = false }
unjust-core = { version = "0.1.0", path = "unjust-core" }
unjust-list = { version = "0.1.0", path = "unjust-list" }
unjust-init = { version = "0.1.0", path = "unjust-init" }
unjust-use = { version = "0.1.0", path = "unjust-use" }
which = "7.0.3"
cargo-husky = { version = "1.5.0", default-features = false }
