[package]
name = "unjust-cli"
edition.workspace = true
version.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
console = { workspace = true }
facet = { workspace = true, features = [] }
facet-args = { workspace = true, features = [] }
unjust-core = { workspace = true }
unjust-list = { workspace = true }
unjust-init = { workspace = true }
unjust-use = { workspace = true }

[dev-dependencies]
assert_cmd = { version = "2.0.17", features = ["color", "color-auto"] }
predicates = "3.1.3"
temp-env = { version = "0.3.6", default-features = false }
tempfile = { version = "3.19.1", default-features = false }

[[bin]]
name = "unjust"
path = "src/main.rs"
