[package]
name = "unjust-core"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Core functionality for the unjust tool"
repository.workspace = true

[dependencies]
standard_paths = { workspace = true }

[dev-dependencies]
cargo-husky = { workspace = true, features = ["user-hooks"] }
tempfile = { version = "3.19.1", default-features = false }
