[package]
name = "unjust-use"
publish = false
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Use subcommand for the unjust tool"
repository.workspace = true

[dependencies]
console = { workspace = true }
facet = { workspace = true, features = [] }
facet-args = { workspace = true }
unjust-core = { workspace = true }
which = { workspace = true }
